# disjoint

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
include/tb/disjoint/: algorithm.h  subset.h
misc/: bench.csv  bench.json
scripts/: benchmark.py  dev-notebook.ipynb
src/: algorithm.cc  bind.cc  subset.cc
tests/: Tests.cmake
tests/src/: main.cc
