[project]
name = 'disjoint'
version = '0.1.0'
requires-python = '>=3.11'
dependencies = [
	'ipykernel>=6.26',
	'ipython>=8.17',
	'matplotlib>=3.8',
	'numpy>=1.26',
	'pandas>=2.0',
	'seaborn>=0.13'
]

[project.optional-dependencies]
dev = [
	'black',
	'isort',
	'nanobind',
	'pyre-check',
	'pyright',
	'ruff-lsp',
]

[build-system]
requires = [
	'nanobind >=1.6.2',
	'scikit-build-core >=0.5.1', 
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.cibuildwheel]
build-verbosity = 1

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.black]
line-length = 79
